--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .upperBody {
   background-color: #1f2937;
-  height: 856px;
+  height: 800px;
 }
 
 .topNav {
@@ -24,6 +24,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   max-width: 620px;
   max-height: 50px;
   gap: 20px;
@@ -118,6 +119,7 @@
   align-items: center;
   height: 38px;
   width: 100%;
+  min-width: 65px;
   max-width: 65px;
   padding-left: 8px;
   padding-right: 8px;
@@ -132,6 +134,7 @@
   align-items: center;
   height: 38px;
   width: 100%;
+  min-width: 65px;
   max-width: 65px;
   padding-left: 8px;
   padding-right: 8px;
@@ -150,7 +153,8 @@
 .mainBody {
   display: flex;
   flex-direction: column;
-  margin-top: 24px;
+  justify-content: center;
+  margin-top: 0px;
   height: 100%;
   min-height: 756px;
 }
@@ -158,8 +162,9 @@
 .bannerIMG {
   object-fit: cover;
   width: 100%;
-  max-width: 768px;
-  min-height: 200px;
+  max-width: 968px;
+  min-height: 460px;
+  max-height: 500px;
 }
 
 .bannerSection {
@@ -169,7 +174,8 @@
   align-items: center;
   gap: 24px;
   width: 325px;
-  margin-top: 50px;
+  margin-top: 10px;
+  margin-bottom: 40px;
   margin-left: auto;
   margin-right: auto;
   z-index: 10;
@@ -521,6 +527,7 @@
   width: 100%;
   max-width: 768px;
   min-height: 200px;
+  max-height: 500px;
   border-radius: 0px;
 }
 
@@ -535,9 +542,9 @@
   border-radius: 8px;
   width: 100%;
   max-width: 340px;
-  left: 10px;
-  right: 10px;
-  margin-right: auto;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%);
   height: 350px;
   box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1);
 }
@@ -901,10 +908,127 @@
   height: 25px;
 }
 
+  /* Vectors */
+  .vector1 {
+    display: none;
+    position: absolute;
+    top: 200px;
+    left: 360px;
+  }
+
+  .vector2 {
+    display: none;
+    position: absolute;
+    top: 180px;
+    left: 1150px;
+    z-index: 10;
+  }
+
+  .vector3 {
+    display: none;
+    position: absolute;
+    bottom: 70px;
+    left: 350px;
+  }
+
+  .vector4 {
+    display: none;
+    position: absolute;
+    top: 440px;
+    left: 630px;
+  }
+
+  .vector5 {
+    display: none;
+    position: absolute;
+    left: 150px;
+    top: 200px;
+  }
+
+  .vector6 {
+    display: none;
+    position: absolute;
+    right: 150px;
+    top: 200px;
+  }
+
+  .vector7 {
+    display: none;
+    position: absolute;
+    right: 150px;
+    top: 750px;
+  }
+
+  .vector8 {
+    display: none;
+    position: absolute;
+    right: 700px;
+    top: 900px;
+  }
+
+  .vector9 {
+    display: none;
+    position: absolute;
+    right: 150px;
+    top: 1600px;
+  }
+
+  .vector10 {
+    display: none;
+    position: absolute;
+    left: 50px;
+    top: 1600px;
+  }
+
+  .vector11 {
+    display: none;
+    position: absolute;
+    left: 150px;
+    bottom: 500px;
+  }
+
+  .vector12 {
+    display: none;
+    position: absolute;
+    right: 150px;
+    bottom: 500px;
+  }
+
+  .vector13 {
+    display: none;
+    position: absolute;
+    left: 150px;
+    bottom: 50px;
+  }
+
+  .vector14 {
+    display: none;
+    position: absolute;
+    right: 150px;
+    bottom: 50px;
+  }
+
+  .vector15 {
+    display: none;
+    position: absolute;
+    right: 70px;
+    top: 70px;
+  }
+
+  .vector16 {
+    display: none;
+    position: absolute;
+    left: 60px;
+    top: 950px;
+  }
+
+
+
+
 @media (min-width: 768px) {
   .upperBody {
     background-color: #1f2937;
-    height: 856px;
+    height: 1000px;
   }
 
   .topNav {
@@ -928,7 +1052,7 @@
   }
 
   .topNavInnerResponsive {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -943,9 +1067,9 @@
   }
 
   .topNavImg {
-    width: 0px;
-    height: 0px;
-    display: none;
+    width: 100px;
+    height: 50px;
+    display: flex;
   }
 
   .topNavItems {
@@ -1016,7 +1140,10 @@
     align-items: center;
     height: 48px;
     padding: 5px;
+    padding-left: 0px;
+    padding-right: 0px;
     width: 100%;
+    min-width: 90px;
     max-width: 90px;
     font-weight: 600;
     background-color: #10b981;
@@ -1028,7 +1155,13 @@
     justify-content: center;
     align-items: center;
     height: 48px;
-    width: 75px;
+    padding: 5px;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 100%;
+    min-width: 90px;
+    max-width: 90px;
+    font-weight: 600;
     background-color: #059669;
     border-radius: 8px;
   }
@@ -1043,7 +1176,8 @@
   .mainBody {
     display: flex;
     flex-direction: column;
-    margin-top: 24px;
+    justify-content: space-between;
+    margin-top: 0px;
     height: 100%;
     min-height: 756px;
   }
@@ -1052,7 +1186,8 @@
     object-fit: cover;
     width: 100%;
     max-width: 1440px;
-    min-height: 200px;
+    min-height: 600px;
+    max-height: 1000px;
   }
 
   .bannerSection {
@@ -1074,7 +1209,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     gap: 16px;
   }
 
@@ -1222,7 +1357,7 @@
     justify-content: center;
     align-items: center;
     gap: 32px;
-    margin-top: -300px;
+    margin-top: -330px;
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(255, 255, 255, 0.9);
@@ -1247,7 +1382,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 99%;
+    width: 100%;
+    max-width: 99%;
     gap: 8px;
   }
 
@@ -1419,6 +1555,7 @@
     width: 100%;
     max-width: 1440px;
     min-height: 200px;
+    max-height: 600px;
     border-radius: 0px;
   }
 
@@ -1433,9 +1570,9 @@
     border-radius: 8px;
     width: 100%;
     max-width: 500px;
-    left: 10px;
-    right: 10px;
-    margin-right: auto;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%);
     height: 350px;
     box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1);
   }
@@ -1508,7 +1645,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 150px;
   }
 
   .teamSection {
@@ -1646,7 +1783,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 150px;
     min-height: 400px;
     height: 100%;
   }
@@ -1687,7 +1824,7 @@
     padding-right: 25px;
     gap: 10px;
     margin-top: 25px;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
     align-items: center;
   }
 
@@ -1702,7 +1839,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 150px;
     background-color: #1f2937;
     width: 100%;
     height: 500px;
@@ -1748,6 +1885,7 @@
 
   .footerContactSection {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     gap: 50px;
     margin-top: 25px;
@@ -1789,6 +1927,120 @@
     width: 35px;
     height: 35px;
   }
+
+    /* Vectors */
+  .vector1 {
+    display: none;
+    position: absolute;
+    top: 200px;
+    left: 360px;
+  }
+
+  .vector2 {
+    display: none;
+    position: absolute;
+    top: 180px;
+    left: 1150px;
+    z-index: 10;
+  }
+
+  .vector3 {
+    display: none;
+    position: absolute;
+    bottom: 70px;
+    left: 350px;
+  }
+
+  .vector4 {
+    display: none;
+    position: absolute;
+    top: 440px;
+    left: 630px;
+  }
+
+  .vector5 {
+    display: none;
+    position: absolute;
+    left: 150px;
+    top: 200px;
+  }
+
+  .vector6 {
+    display: none;
+    position: absolute;
+    right: 150px;
+    top: 200px;
+  }
+
+  .vector7 {
+    display: none;
+    position: absolute;
+    right: 150px;
+    top: 750px;
+  }
+
+  .vector8 {
+    display: none;
+    position: absolute;
+    right: 700px;
+    top: 900px;
+  }
+
+  .vector9 {
+    display: none;
+    position: absolute;
+    right: 150px;
+    top: 1600px;
+  }
+
+  .vector10 {
+    display: none;
+    position: absolute;
+    left: 50px;
+    top: 1600px;
+  }
+
+  .vector11 {
+    display: none;
+    position: absolute;
+    left: 150px;
+    bottom: 500px;
+  }
+
+  .vector12 {
+    display: none;
+    position: absolute;
+    right: 150px;
+    bottom: 500px;
+  }
+
+  .vector13 {
+    display: none;
+    position: absolute;
+    left: 150px;
+    bottom: 50px;
+  }
+
+  .vector14 {
+    display: none;
+    position: absolute;
+    right: 150px;
+    bottom: 50px;
+  }
+
+  .vector15 {
+    display: none;
+    position: absolute;
+    right: 70px;
+    top: 70px;
+  }
+
+  .vector16 {
+    display: none;
+    position: absolute;
+    left: 60px;
+    top: 950px;
+  }
 }
 
 @media (min-width: 1440px) {
@@ -1823,7 +2075,7 @@
   }
 
   .topNavInnerResponsive {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -1890,7 +2142,9 @@
     font-weight: 600;
     height: 48px;
     width: 128px;
+    border-radius: 8px;
     cursor: pointer;
+    transition: all 300ms ease-in-out;
   }
 
   :hover.login {
@@ -1903,6 +2157,7 @@
     color: white;
     border-radius: 8px;
     cursor: pointer;
+    transition: all 300ms ease-in-out;
   }
 
   .signUp {
@@ -1910,10 +2165,17 @@
     justify-content: center;
     align-items: center;
     height: 48px;
-    width: 128px;
+    width: 100%;
+    min-width: 129px;
+    max-width: 129px;
+    padding: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
     font-weight: 600;
     background-color: #10b981;
     border-radius: 8px;
+    transition: all 300ms ease-in-out;
+    cursor: pointer;
   }
 
   :hover.signUp {
@@ -1921,9 +2183,17 @@
     justify-content: center;
     align-items: center;
     height: 48px;
-    width: 128px;
+    width: 100%;
+    min-width: 129px;
+    max-width: 129px;
+    padding: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    font-weight: 600;
     background-color: #059669;
     border-radius: 8px;
+    transition: all 300ms ease-in-out;
+    cursor: pointer;
   }
 
   .signUpText {
@@ -1935,6 +2205,7 @@
   /* bannerText */
   .mainBody {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     margin-top: 24px;
     height: 100%;
@@ -1944,6 +2215,8 @@
   .bannerIMG {
     display: flex;
     justify-content: end;
+    width: fit-content;
+    max-width: fit-content;
     height: 100%;
     min-height: 800px;
   }
@@ -1956,7 +2229,7 @@
     gap: 36px;
     width: 444px;
     height: 356px;
-    margin-top: 200px;
+    margin-top: 160px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1973,16 +2246,19 @@
     color: white;
     font-size: 60px;
     font-weight: 900;
+    text-align: start;
   }
 
   .bannerSubText {
     color: white;
     font-size: 18px;
     font-weight: 400;
+    text-align: start;
   }
 
   .toogleSection {
     display: flex;
+    justify-content: flex-start;
     width: 100%;
     gap: 12px;
   }
@@ -2105,14 +2381,17 @@
   /* OuterTab */
   .outerTab {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     margin-top: -50px;
     margin-left: auto;
     margin-right: auto;
     background-color: white;
     border-radius: 8px;
-    width: 1013px;
+    width: 100%;
+    max-width: 1013px;
     height: 112px;
+    gap: 0px;
     box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1);
   }
 
@@ -2120,22 +2399,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 400px;
+    width: 100%;
+    max-width: 150px;
     gap: 8px;
+    height: 100%;
     border-right: 1px solid #d1d5db;
+    cursor: pointer;
   }
 
   .outerTabItemsLocation {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
     width: 100%;
+    max-width: 456px;
     gap: 8px;
     border-right: 1px solid #d1d5db;
   }
 
   .outerTabItemSpacers {
-    height: 18%;
+    height: 24px;
     width: 2px;
     background-color: #10b981;
   }
@@ -2170,6 +2454,7 @@
     padding-top: 12px;
     padding-right: 42px;
     padding-bottom: 12px;
+    transition: all 300ms ease-in-out;
     cursor: pointer;
   }
 
@@ -2190,7 +2475,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 400px;
+    width: 100%;
+    max-width: 234px;
     cursor: pointer;
   }
 
@@ -2232,6 +2518,7 @@
     border-radius: 12px;
     width: 214px;
     height: 260px;
+    box-shadow: none;
     cursor: pointer;
   }
 
@@ -2286,7 +2573,8 @@
   }
 
   .exploreMainImg {
-    height: 704px;
+    height: 100%;
+    max-height: 704px;
     width: 810px;
     object-fit: cover;
     border-top-right-radius: 80px;
@@ -2297,18 +2585,50 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 413px;
     gap: 40px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    position: revert;
+    background-color: none;
+    border-radius: 8px;
+    width: 100%;
+    max-width: 433px;
+    transform: none;
+    height: 100%;
+    box-shadow: none;
   }
 
   .exploreMainText {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: start;
+    margin-left: 10px;
+    margin-right: 10px;
     color: black;
     font-size: 36px;
     font-weight: 800;
   }
 
   .exploreMainSubText {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: start;
+    margin-left: 10px;
+    margin-right: 20px;
+    color: black;
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  .exploreMainTextInner {
+    color: black;
+    font-size: 36px;
+    font-weight: 800;
+  }
+
+  .exploreSubTextInner {
     color: black;
     font-size: 18px;
     font-weight: 400;
@@ -2318,11 +2638,16 @@
     display: flex;
     width: 433px;
     gap: 40px;
+    justify-content: flex-start;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .exploreItems {
     display: flex;
     gap: 12px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .exploreTexts {
@@ -2366,7 +2691,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 620px;
+    width: 100%;
+    max-width: 624px;
     gap: 16px;
   }
 
@@ -2401,7 +2727,8 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 320px;
+    width: 100%;
+    max-width: 320px;
     height: 400px;
     border-radius: 12px;
     background-color: #fafafa;
@@ -2440,6 +2767,7 @@
     background-color: #f3f4f6;
     border-radius: 8px;
     margin-bottom: 36px;
+    transition: all 500ms ease-in-out;
   }
 
   :hover.teamCardButton {
@@ -2450,7 +2778,7 @@
     background-color: #059669;
     border-radius: 8px;
     margin-bottom: 36px;
-    transition: all 700ms ease-in-out;
+    transition: all 500ms ease-in-out;
   }
 
   .teamCardButtonText {
@@ -2517,6 +2845,7 @@
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(7, 1fr);
+    justify-content: center;
     gap: 30px;
     margin-top: 81px;
     margin-bottom: 160px;
@@ -2577,6 +2906,12 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 25px;
+    align-items: center;
+    width: 100%;
   }
 
   .footerContactContainer {
@@ -2611,12 +2946,14 @@
 
   /* Vectors */
   .vector1 {
+    display: block;
     position: absolute;
-    top: 240px;
-    left: 340px;
+    top: 200px;
+    left: 360px;
   }
 
   .vector2 {
+    display: block;
     position: absolute;
     top: 180px;
     left: 1100px;
@@ -2624,81 +2961,102 @@
   }
 
   .vector3 {
+    display: block;
     position: absolute;
-    bottom: 80px;
+    bottom: 100px;
     left: 350px;
   }
 
   .vector4 {
+    display: block;
     position: absolute;
-    top: 480px;
-    left: 600px;
+    top: 440px;
+    left: 630px;
   }
 
   .vector5 {
+    display: block;
     position: absolute;
     left: 150px;
     top: 200px;
   }
 
   .vector6 {
+    display: block;
     position: absolute;
     right: 150px;
     top: 200px;
   }
 
   .vector7 {
+    display: block;
     position: absolute;
     right: 150px;
     top: 750px;
   }
 
   .vector8 {
+    display: block;
     position: absolute;
     right: 700px;
     top: 900px;
   }
 
   .vector9 {
+    display: block;
     position: absolute;
     right: 150px;
     top: 1600px;
+    z-index: 99999999;
   }
 
   .vector10 {
+    display: block;
     position: absolute;
     left: 50px;
     top: 1600px;
   }
 
   .vector11 {
+    display: block;
     position: absolute;
     left: 150px;
     bottom: 500px;
   }
 
   .vector12 {
+    display: block;
     position: absolute;
     right: 150px;
     bottom: 500px;
   }
 
   .vector13 {
+    display: block;
     position: absolute;
     left: 150px;
     bottom: 50px;
   }
 
   .vector14 {
+    display: block;
     position: absolute;
     right: 150px;
     bottom: 50px;
   }
 
   .vector15 {
+    display: block;
     position: absolute;
     right: 70px;
     top: 70px;
+  }
+
+  .vector16 {
+    display: block;
+    position: absolute;
+    left: 60px;
+    top: 950px;
   }
 }
 
